Fix self portrait on mobile

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -53,7 +53,11 @@ footer {
 // Self portrait
 .mister-ridlen {
   text-align: center;
-  margin: 3em 0 4em;
+  margin-bottom: 2em;
+
+  @media(min-width: $screen-sm-min) {
+    margin: 3em 0 4em;
+  }
 }
 
 // Remove border from pager buttons
